--- a/Onyx/Onyx.Cartographer/Content/application.scss
+++ b/Onyx/Onyx.Cartographer/Content/application.scss
@@ -1,4 +1,7 @@
 ﻿@import "shared/colours";
 @import "shared/fonts";
+@import "shared/tags";
 
+@import "pages/base";
+@import "pages/sidebar";
 @import "pages/home";
