--- a/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
+++ b/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
@@ -4,3 +4,8 @@ $sidebar-background-colour: #d8d8d8;
 
 // Font Colour
 $primary-font-colour: #333;
+$primary-invert-font-colour: white;
+
+// Active Colours
+$primary-active-colour: #009ff2;
+$secondary-active-colour: #21b3ff;
