--- a/Onyx/Onyx.Cartographer/Content/pages/_sidebar.scss
+++ b/Onyx/Onyx.Cartographer/Content/pages/_sidebar.scss
@@ -56,7 +56,7 @@
 						overflow: hidden;
 						position: relative;
 
-						color: $primary-invert-font-colour;
+						color: $primary-font-colour;
 						text-decoration: none;
 
 						:hover, 
@@ -76,6 +76,8 @@
 						height: 30px;
 						line-height: 30px;
 						text-align: center;
+
+						background-position: center;
 					}
 				}
 			}
