--- a/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
+++ b/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
@@ -1,11 +1,11 @@
-﻿// Backgrounds
+﻿/* Backgrounds */ 
 $main-background-colour: #fff;
 $sidebar-background-colour: #d8d8d8;
 
-// Font Colour
+/* Font Colour */ 
 $primary-font-colour: #333;
 $primary-invert-font-colour: white;
 
-// Active Colours
+/* Active Colours */ 
 $primary-active-colour: #009ff2;
 $secondary-active-colour: #21b3ff;
