--- a/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
+++ b/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
@@ -1,11 +1,11 @@
 ﻿/* Backgrounds */ 
-$main-background-colour: #fff;
-$sidebar-background-colour: #d8d8d8;
+$main-background-colour: #dcdcdc;
+$sidebar-background-colour: #161616;
 
 /* Font Colour */ 
-$primary-font-colour: #333;
+$primary-font-colour: #161616;
 $primary-invert-font-colour: white;
 
 /* Active Colours */ 
-$primary-active-colour: #009ff2;
-$secondary-active-colour: #21b3ff;
+$primary-active-colour: #1298de;
+$secondary-active-colour: #22b3ff;
