--- a/Onyx/Onyx.Cartographer/Content/application.scss
+++ b/Onyx/Onyx.Cartographer/Content/application.scss
@@ -1,6 +1,7 @@
 ﻿@import "shared/colours";
 @import "shared/fonts";
 @import "shared/tags";
+@import "shared/css_fixes";
 
 @import "pages/base";
 @import "pages/sidebar";
