--- a/Onyx/Onyx.Cartographer/Content/application.css
+++ b/Onyx/Onyx.Cartographer/Content/application.css
@@ -141,4 +141,9 @@ body {
   height: auto;
   overflow-y: scroll;
   overflow-x: hidden;
+  background: url(/img/logos/logo-base.png);
+  background-image: -webkit-image-set(url(/img/logos/logo-base.png) 1x, url(/img/logos/logo-base@2x.png) 2x);
+  background-position: center;
+  background-attach: none;
+  background-repeat: no-repeat;
 }
