--- a/Onyx/Onyx.Cartographer/Content/pages/_scrollable_content.scss
+++ b/Onyx/Onyx.Cartographer/Content/pages/_scrollable_content.scss
@@ -9,4 +9,11 @@
 	height: auto;
 	overflow-y: scroll;
 	overflow-x: hidden;
+
+	background: url(/img/logos/logo-base.png);
+	background-image: -webkit-image-set(url(/img/logos/logo-base.png) 1x, url(/img/logos/logo-base@2x.png) 2x);
+
+	background-position: center;
+	background-attach: none;
+	background-repeat: no-repeat;
 }
