--- a/Onyx/Onyx.Cartographer/Content/pages/_base.scss
+++ b/Onyx/Onyx.Cartographer/Content/pages/_base.scss
@@ -1,5 +1,5 @@
 ﻿body {
-	font-family: 'Source Sans Pro', sans-serif, ariel;
+	font-family: 'Source Sans Pro', sans-serif, arial;
 	color: $primary-font-colour;
 	background-color: $main-background-colour;
 	-webkit-font-smoothing: antialiased;
