--- a/Onyx/Onyx.Cartographer/Content/pages/_home.scss
+++ b/Onyx/Onyx.Cartographer/Content/pages/_home.scss
@@ -1,1 +1,11 @@
-﻿
+﻿.layoutWrapper > #opacityMask {
+	position: absolute;
+	display: none;
+	opacity: 0.7;
+	background-color: $mask-background-colour;
+
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
