--- a/Onyx/Onyx.Cartographer/Content/shared/_tags.scss
+++ b/Onyx/Onyx.Cartographer/Content/shared/_tags.scss
@@ -1,13 +1,10 @@
 ﻿hr {
 	border: 0;
 	border-top: 1px solid #3a3a3a;
-	margin: 20px 40px;
+	padding: 5px 5px;
+	margin: 10px 0;
 
 	display: block;
-	-webkit-margin-before: 0.5em;
-	-webkit-margin-after: 0.5em;
-	-webkit-margin-start: 0.5em;
-	-webkit-margin-end: 0.5em;
 }
 
 a {
