--- a/Onyx/Onyx.Cartographer/Content/application.scss
+++ b/Onyx/Onyx.Cartographer/Content/application.scss
@@ -9,3 +9,6 @@
 @import "pages/scrollable_content";
 @import "pages/home";
 @import "pages/modals";
+
+@import "pages/create/index";
+@import "pages/create/modify";
