--- a/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
+++ b/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
@@ -6,6 +6,7 @@ $mask-background-colour: #6c6c6c;
 /* Font Colour */ 
 $primary-font-colour: #161616;
 $secondary-font-colour: #747474;
+$tertiary-font-color: #7C7C7C;
 $primary-invert-font-colour: white;
 
 /* Active Colours */ 
@@ -21,3 +22,6 @@ $modal-ident-info: #306b9a;
 
 /* Inputs */
 $primary-button-background: #3b3b3b;
+
+/* Border */
+$drag-drop-border: #aaa;
