--- a/Onyx/Onyx.Cartographer/Content/shared/_fonts.scss
+++ b/Onyx/Onyx.Cartographer/Content/shared/_fonts.scss
@@ -1,1 +1,2 @@
 ﻿@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono|Ubuntu:400,500);
