--- a/Onyx/Onyx.Cartographer/Content/application.css
+++ b/Onyx/Onyx.Cartographer/Content/application.css
@@ -176,11 +176,25 @@ body {
   background-repeat: no-repeat;
 }
 
-.layoutWrapper > #opacityMask {
+.layoutWrapper > #modalMask {
   position: absolute;
   display: none;
   opacity: 0.7;
   background-color: #6c6c6c;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.layoutWrapper > #pendingMask {
+  position: absolute;
+  display: none;
+  opacity: 0.7;
+  background-color: #6c6c6c;
+  background-image: url(../img/animated/loading-white.gif);
+  background-position: center;
+  background-repeat: no-repeat;
   top: 0;
   bottom: 0;
   left: 0;
