--- a/Onyx/Onyx.Cartographer/Content/pages/_home.scss
+++ b/Onyx/Onyx.Cartographer/Content/pages/_home.scss
@@ -1,8 +1,24 @@
-﻿.layoutWrapper > #opacityMask {
+﻿.layoutWrapper > #modalMask {
 	position: absolute;
 	display: none;
 	opacity: 0.7;
 	background-color: $mask-background-colour;
+
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.layoutWrapper > #pendingMask {
+	position: absolute;
+	display: none;
+	opacity: 0.7;
+
+	background-color: $mask-background-colour;
+	background-image: url(../img/animated/loading-white.gif);
+	background-position: center;
+	background-repeat: no-repeat;
 
 	top: 0;
 	bottom: 0;
