--- a/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
@@ -10,14 +10,17 @@
 	
 	<!-- jquerty -->
 	@Scripts.Render("~/bundles/jquery")
-	@RenderSection("scripts", required: false)
+
+	<!-- Data Storage -->
+	@Scripts.Render("~/Scripts/stor/data_storage.js")
 
 	<!-- IDE -->	
 	@Styles.Render("~/Content/ide/codemirror.css")	
 	@Scripts.Render("~/Scripts/ide/codemirror.js")
 	@Scripts.Render("~/Scripts/ide/mode/wumboscript.js")
 	@Scripts.Render("~/Scripts/ide/addons/active-line.js")
-	@Styles.Render("~/Content/ide/theme/onyx.css")
+	@Styles.Render("~/Content/ide/theme/onyx.css")	
+	@RenderSection("scripts", required: false)
 
 </head>
 
