--- a/Onyx/Onyx.Domain/Views/Home/Index.cshtml
+++ b/Onyx/Onyx.Domain/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="hero-unit">
     <h1>Onyx Domain</h1>
-    <p class="lead">The API Service for the Onyx Cartographer. Powers the Editor used by 3 people.</p>
-    <p><a href="http://github.com/Xerax/Onyx" class="btn btn-primary btn-large">Learn more about the Onyx Domain's API &raquo;</a></p>
+    <p class="lead">The API Service that powers the Onyx Cartographer. </p>
+    <p><a href="http://github.com/Xerax/Onyx" class="btn btn-primary btn-large">Learn more about the Onyx Project &raquo;</a></p>
 </div>
