--- a/Onyx/Onyx.Domain/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Domain/Views/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <title>@ViewBag.Title</title>
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
+		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+		<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -16,7 +17,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    @Html.ActionLink("Onyx's Domain", "Index", "Home", null, new { @class = "brand" })
+                    @Html.ActionLink("Onyx Domain", "Index", "Home", null, new { @class = "brand" })
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
@@ -33,9 +34,5 @@
                 <p>&copy; 2013 - @DateTime.Now.Year :: Onyx Domain</p>
             </footer>
         </div>
-
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        @RenderSection("scripts", required: false)
     </body>
 </html>
