updated ide redrawing code, fixed another bug in codemirror

--- a/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
 	@Scripts.Render("~/Scripts/cartographer/cartographer.js")
 
 	<!-- Utilities -->	
+	@Scripts.Render("~/Scripts/util/events.js")
 	@Scripts.Render("~/Scripts/util/functions.js")	
 	@Scripts.Render("~/Scripts/util/misc.js")
 	@Scripts.Render("~/Scripts/util/mask_manager.js")
