--- a/Onyx/Onyx.Cartographer/Content/application.css
+++ b/Onyx/Onyx.Cartographer/Content/application.css
@@ -164,7 +164,7 @@ body {
   bottom: 0px;
   top: 50px;
   left: 315px;
-  right: 0;
+  right: 35px;
   width: auto;
   height: auto;
   overflow: hidden;
@@ -179,7 +179,7 @@ body {
 .layoutWrapper > #modalMask {
   position: absolute;
   display: none;
-  opacity: 0.7;
+  opacity: 1.0;
   background-color: #6c6c6c;
   top: 0;
   bottom: 0;
@@ -190,7 +190,7 @@ body {
 .layoutWrapper > #pendingMask {
   position: absolute;
   display: none;
-  opacity: 0.7;
+  opacity: 1.0;
   background-color: #6c6c6c;
   background-image: url(../img/animated/loading-white.gif);
   background-position: center;
