--- a/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
+++ b/Onyx/Onyx.Cartographer/Content/shared/_colours.scss
@@ -2,12 +2,14 @@
 $main-background-colour: #dcdcdc;
 $sidebar-background-colour: #161616;
 $mask-background-colour: #6c6c6c;
+$njs-footer-colour: #101010;
 
 /* Font Colour */ 
 $primary-font-colour: #161616;
 $secondary-font-colour: #747474;
 $tertiary-font-color: #7C7C7C;
 $primary-invert-font-colour: white;
+$secondary-invert-font-colour: #646464;
 
 /* Active Colours */ 
 $primary-active-colour: #1298de;
