--- a/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
@@ -73,6 +73,48 @@
 				<input type="button" value="Close" />
 			</div>
 		</div>
+		<noscript>
+			<div id="userNeedsJavascriptMessage">
+				<div class="innerWrapper">
+					<div class="title"></div>
+
+					<div class="njsWrapper">
+						<div class="njsContent">
+							<div class="njsPrimaryContent">
+								<span class="header">
+									I Need Javascript :(
+									<br />
+									Could you turn it on? ಠ_ಠ
+								</span>
+							</div>
+						</div>
+					</div>
+
+					<div class="njsFooter">
+						<div class="sitemap">
+							<ul>
+								<li>
+									<a href="http://www.xboxchaos.com/">
+										XboxChaos
+									</a>
+								</li>
+								<li>
+									<a href="http://www.se7ensins.com/">
+										Se7enSins
+									</a>
+								</li>
+								<li>
+									<a href="http://www.iBotModz.net/">
+										iBotModz
+									</a>
+								</li>
+								<li>&copy; 2013 0xdeadbeef </li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</noscript>
 	</div>
 	<!-- Add Angular -->
 	@Scripts.Render("~/Scripts/angular.js")
