--- a/Onyx/Onyx.Cartographer/Content/application.css
+++ b/Onyx/Onyx.Cartographer/Content/application.css
@@ -201,6 +201,110 @@ body {
   right: 0;
 }
 
+.layoutWrapper > #userNeedsJavascriptMessage {
+  position: absolute;
+  background-color: #161616;
+  background-image: url("http://i.imgur.com/jYbs6eE.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper {
+  position: absolute;
+  background: white;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, #262626));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#262626',GradientType=0 );
+  /* IE6-9 */
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .title {
+  margin-left: 60px;
+  margin-top: 60px;
+  width: 171px;
+  height: 49px;
+  background: url(/img/logos/sidebar-logo.png);
+  background-image: -webkit-image-set(url(/img/logos/sidebar-logo.png) 1x, url(/img/logos/sidebar-logo@2x.png) 2x);
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsWrapper {
+  position: relative;
+  width: 950px;
+  height: calc(100% - 249px);
+  margin: 0 auto;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsWrapper .njsContent {
+  position: absolute;
+  bottom: 120px;
+  z-index: 1;
+  width: 100%;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsWrapper .njsContent .njsPrimaryContent {
+  width: 100%;
+  position: relative;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsWrapper .njsContent .njsPrimaryContent .header {
+  font-size: 45px;
+  font-weight: 100;
+  line-height: 1.26em;
+  display: block;
+  width: 80%;
+  margin: 0;
+  white-space: normal;
+  color: #ebebeb;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter {
+  position: relative;
+  background-color: #161616;
+  width: 100%;
+  height: 140px;
+  font-size: 1.857em;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 40px;
+  background-color: #101010;
+  color: #646464;
+  text-align: center;
+  font-size: 14px;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-align: center;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap ul li {
+  display: inline;
+  margin: 0 8px;
+  line-height: 40px;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap ul li a {
+  color: inherit;
+}
+.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap ul li a:hover {
+  text-decoration: underline;
+}
+
 .layoutWrapper > #modal {
   display: none;
   position: fixed;
