--- a/Onyx/Onyx.Domain/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Domain/Views/Shared/_Layout.cshtml
@@ -7,7 +7,14 @@
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-    </head>
+    
+		<style>
+		body {
+			padding-top: 60px;
+		}
+		</style>
+	
+	</head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
