--- a/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Shared/_Layout.cshtml
@@ -62,13 +62,13 @@
 			</div>
 		</div>
 		<noscript>
-			<div id="userNeedsJavascriptMessage">
-				<div class="innerWrapper">
+			<div class="njs alertPage">
+				<div class="njs innerWrapper">
 					<div class="title"></div>
 
-					<div class="njsWrapper">
-						<div class="njsContent">
-							<div class="njsPrimaryContent">
+					<div class="njs wrapper">
+						<div class="njs content">
+							<div class="njs primaryContent">
 								<span class="header">
 									I Need Javascript :(
 									<br />
@@ -78,7 +78,7 @@
 						</div>
 					</div>
 
-					<div class="njsFooter">
+					<div class="njs footer">
 						<div class="sitemap">
 							<ul>
 								<li>
@@ -86,17 +86,20 @@
 										XboxChaos
 									</a>
 								</li>
-								<li>
-									<a href="http://www.se7ensins.com/">
-										Se7enSins
-									</a>
-								</li>
+								<li>•</li>
 								<li>
 									<a href="http://www.iBotModz.net/">
 										iBotModz
 									</a>
 								</li>
-								<li>&copy; 2013 0xdeadbeef </li>
+								<li>•</li>
+								<li>
+									<a href="http://www.branchapp.co/">
+										BranchApp
+									</a>
+								</li>
+								<li>|</li>
+								<li>&copy; 2013 Project Onyx</li>
 							</ul>
 						</div>
 					</div>
