--- a/Onyx/Onyx.Cartographer/Content/application.css
+++ b/Onyx/Onyx.Cartographer/Content/application.css
@@ -201,7 +201,7 @@ body {
   right: 0;
 }
 
-.layoutWrapper > #userNeedsJavascriptMessage {
+.layoutWrapper > .alertPage {
   position: absolute;
   background-color: #161616;
   background-image: url("http://i.imgur.com/jYbs6eE.jpg");
@@ -212,7 +212,7 @@ body {
   left: 0;
   right: 0;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper {
+.layoutWrapper > .alertPage .innerWrapper {
   position: absolute;
   background: white;
   /* Old browsers */
@@ -235,7 +235,7 @@ body {
   left: 0;
   right: 0;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .title {
+.layoutWrapper > .alertPage .innerWrapper .title {
   margin-left: 60px;
   margin-top: 60px;
   width: 171px;
@@ -243,40 +243,48 @@ body {
   background: url(/img/logos/sidebar-logo.png);
   background-image: -webkit-image-set(url(/img/logos/sidebar-logo.png) 1x, url(/img/logos/sidebar-logo@2x.png) 2x);
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsWrapper {
+.layoutWrapper > .alertPage .innerWrapper .wrapper {
   position: relative;
-  width: 950px;
+  width: 700px;
   height: calc(100% - 249px);
   margin: 0 auto;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsWrapper .njsContent {
+.layoutWrapper > .alertPage .innerWrapper .wrapper .content {
   position: absolute;
   bottom: 120px;
   z-index: 1;
   width: 100%;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsWrapper .njsContent .njsPrimaryContent {
+.layoutWrapper > .alertPage .innerWrapper .wrapper .content .primaryContent {
   width: 100%;
   position: relative;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsWrapper .njsContent .njsPrimaryContent .header {
+.layoutWrapper > .alertPage .innerWrapper .wrapper .content .primaryContent .header {
   font-size: 45px;
   font-weight: 100;
   line-height: 1.26em;
   display: block;
-  width: 80%;
   margin: 0;
   white-space: normal;
   color: #ebebeb;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter {
+.layoutWrapper > .alertPage .innerWrapper .wrapper .content .primaryContent .header strong {
+  font-size: 70px;
+}
+.layoutWrapper > .alertPage .innerWrapper .wrapper .content .primaryContent .header hr {
+  border-top: 2px solid white;
+  height: 2px;
+  margin: 0 0 5px 0;
+  padding: 0;
+}
+.layoutWrapper > .alertPage .innerWrapper .footer {
   position: relative;
   background-color: #161616;
   width: 100%;
   height: 140px;
   font-size: 1.857em;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap {
+.layoutWrapper > .alertPage .innerWrapper .footer .sitemap {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -287,21 +295,21 @@ body {
   text-align: center;
   font-size: 14px;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap ul {
+.layoutWrapper > .alertPage .innerWrapper .footer .sitemap ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
   text-align: center;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap ul li {
+.layoutWrapper > .alertPage .innerWrapper .footer .sitemap ul li {
   display: inline;
-  margin: 0 8px;
+  margin: 0 4px;
   line-height: 40px;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap ul li a {
+.layoutWrapper > .alertPage .innerWrapper .footer .sitemap ul li a {
   color: inherit;
 }
-.layoutWrapper > #userNeedsJavascriptMessage .innerWrapper .njsFooter .sitemap ul li a:hover {
+.layoutWrapper > .alertPage .innerWrapper .footer .sitemap ul li a:hover {
   text-decoration: underline;
 }
 
